--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
 <button id="askdata" type="button" > red </button >
 <script >
 var port;
-function sendByte(b){  
-     if (port && port.writable) {   
-          const writer = port.writable.getWriter();   
-          writer.write(b);    
-          writer.releaseLock();  }}
+function sendByte(b){
+  if (port && port.writable) {
+    const writer = port.writable.getWriter();
+    writer.write(b);
+    writer.releaseLock();  }}
 
 if (document.getElementById ('askdata')) {
 document.getElementById ('askdata').addEventListener("click", function() {
-  sendByte(new Uint8Array([98 ])); // ascii 'b'
+  sendByte(new Uint8Array([98])); // ascii 'b'
 });}
 
 
-const test = async function () {    port = await navigator.serial.requestPort({});    await port.open({ baudRate: 115200 });}
+const test = async function () {
+  port = await navigator.serial.requestPort({});
+  await port.open({ baudRate: 115200 });
+}
 
 
 </script>
